--- a/src/main/webapp/WEB-INF/vm/login.vm
+++ b/src/main/webapp/WEB-INF/vm/login.vm
@@ -1,22 +1,1 @@
-<form id="logFrm" name="loginForm">
-	<div class="item">
-		<div class="farea">
-			用户名：   <input style="margin-left: 10px" type="type" name="name" id="name" class="input">
-	    </div>
-    </div>
-	
-	<div class="item" style="margin-top: 10px">
-		<div class="farea">
-			密码：        <input style="margin-left: 20px" type="password" name="password" id="password" class="input">
-	    </div>
-    </div>
-	
-	<div class="item" style="margin-top: 20px">
-        <input class="btn btn-default" type="button" value="login">
-		<input style="margin-left: 20px"class="btn btn-default" type="button" value="logout">
-    </div>
-</form>
-<script language="javaScript">
-	alert('ok');
-</script>
-	
+login
