--- a/src/main/webapp/WEB-INF/vm/layout/head.vm
+++ b/src/main/webapp/WEB-INF/vm/layout/head.vm
@@ -1,4 +1,11 @@
 <head >
     <title>stock console</title>
-	<!--script language="javascript" type="text/javascript" src="http://code.jquery.com/jquery-latest.js"> </script-->
+	 <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
+	 <meta http-equiv="imagetoolbar" content="no"/>
+     <meta http-equiv="pragma" content="no-cache">
+	 <meta http-equiv="Cache-Control" content="no-cache">
+	 <meta http-equiv="expires" content="0">	
+	 <link rel="icon" href="http://www.jd.com/favicon.ico" mce_href="http://www.jd.com/favicon.ico" type="image/x-icon">
+	 <link rel="stylesheet" type="text/css" href="/resources/skin/index.css" media="all"/>
+	 <script language="javascript" type="text/javascript" src="/resources/js/jquery.js"> </script>
 </head>
